Update contact email in index.html

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <p>Contact the team via</p>
 
     <div class="contact-links">
-      <a href="mailto:akaymambetzhanov@gmail.com" class="email">
+      <a href="mailto:dablyoumike0@gmail.com" class="email">
         <strong>Email:</strong> akaymambetzhanov@gmail.com
       </a>
 
